--- a/css/styles1.css
+++ b/css/styles1.css
@@ -29,7 +29,6 @@ body {
     --clr-black: black;
     --clr-white: white;
 }
-
 a {
     text-decoration: none;
 }
@@ -37,7 +36,7 @@ li {
     list-style: none;
 }
 
-/* Titulos */
+/*** Titulos ***/
 h1 {
     font-family: 'Acme', sans-serif;
     font-weight: 700;
@@ -81,39 +80,12 @@ h4 {
     "main"
     "foot";
 }
-/*** Nav comentado para evitar pisar Bootstrap
-     Se va a quitar cuando solo se use Bs ***
-nav {
-    grid-area: nav;
-    background-color: var(--clr-dark-blue);
-    padding: 1.5rem;
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-}*/
+/*** Nav ***/
     nav img {
         max-height: 35px;
         width: auto;
     }
-   /* nav ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    nav ul li {
-        margin: 0 10px;
-    }
-    nav a {
-        font-size: 1.8rem;
-        color: var(--clr-white);
-        text-transform: uppercase;
-        padding: 2px 10px;
-    }
-    nav a:hover {
-        color: var(--clr-extra-light-blue);
-    } */
+/*** Main ***/
 main {
     height: auto;
     grid-area: main;
@@ -122,6 +94,7 @@ main {
     margin: 10px 1%;
     padding: 20px;
 }
+/*** Footer ***/
 footer {
     grid-area: foot;
     background-color: var(--clr-dark-blue);
@@ -155,7 +128,11 @@ footer {
         width: 100%;
         display: flex;
         align-items: center;
-        /*justify-content: center; */
+    }
+    #home .homeMarca {
+        animation-duration: 4s;
+        animation-name: apareceAmplia;
+        animation-iteration-count: initial;
     }
     #home::after {
         content: '';
@@ -223,6 +200,7 @@ footer {
 }
 .itemServicio img {
     max-width: 60px;
+    animation: rotacionHor 8s linear 1s infinite;
 }
 .itemServicio h3 {
     margin: 15px 10px;
@@ -257,7 +235,6 @@ footer {
         display: block;
         width: 100%;
         height: 100%;
-        /* position: relative; */
     }
     .card a img {
         border-radius: 20px;
@@ -277,51 +254,7 @@ footer {
 /*** Contacto ***/
 .contacto {
     margin: 20px 0;
-    /*display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 2fr;
-    gap: 20px;
-    width: 100%;
-    font-size: 0.2rem;
-    font-weight: 200;*/
 }
-/*
-.formulario {
-    padding: 10px;
-} */
-    /*** comentado hasta que solo quede Bs
-    .formulario input {
-        display: block;
-        width: 100%;
-        margin: 10px 5px;
-        font-family: 'Barlow', sans-serif;
-        font-size: 1.6rem;
-    }
-    .formulario textarea {
-        display: block;
-        margin: 10px 5px;
-        width: 100%;
-        resize: none;
-        font-family: 'Barlow', sans-serif;
-        font-size: 1.6rem;
-    }
-    .formulario .btnForm {
-        display: flex;
-        flex-direction: column;
-        margin: 5px 0;
-    }
-    .formulario .btnForm input{
-        margin: 5px 0;
-        border-radius: 10px;
-        border-style: solid;
-        border-width: 1px;
-        border-color: var(--clr-extra-dark-blue);
-        background-color: var(--clr-extra-light-blue);
-    }
-    .formulario .btnForm input:hover {
-        background-color: var(--clr-mid-blue);
-        color: var(--clr-white);
-    } */
     .btnForm {
         margin: 5px 0;
         border-radius: 5px;
@@ -344,8 +277,6 @@ footer {
             width: 100%;
             height: 100%;
         }
-
-
 /*** Fin contacto ***/
 
 /*** Media ***/
@@ -383,3 +314,26 @@ footer {
         grid-template-columns: repeat(4, 1fr);
     }
 }
+
+/*** Keyframes ***/
+@keyframes apareceAmplia {
+    0% {
+      opacity: 0;
+      font-weight: 400;
+      font-size: 3rem;
+      color: var(--clr-extra-light-blue);
+    }
+    100% {
+      opacity: 1;
+      font-weight: 700;
+      font-size: 4rem;
+      color: var(--clr-mid-blue);
+    }
+ }
+
+ @keyframes rotacionHor {
+    from {}
+    to {
+        transform: rotateY(360deg);
+    }
+ }
