--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -14,6 +14,7 @@ $clr-white: rgb(255, 255, 255);
 /*** Font-family - Familias tipograficas ***/
 $mainFont: 'Barlow', sans-serif;
 $titleFont: 'Acme', sans-serif;
+$brandFont: 'Anton', Arial, sans-serif;
 
 /*** fontweight - Ancho de fuente ***/
 $textLigh: 200;
