--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 
 @import "_var.scss";
 @import "_common.scss";
+@import "_extAndMix.scss";
 @import "_navAndFoot.scss";
 @import "_efects.scss";
 @import "_home.scss";
