--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -17,7 +17,7 @@
         text-shadow: -15px 5px 20px #ced0d3;
         color: $clr-x-light-blue;
         letter-spacing: -0.05em;
-        font-family: 'Anton', Arial, sans-serif;
+        font-family: $brandFont;
         user-select: none;
         text-transform: uppercase;
         font-size: 6rem;
