--- a/scss/_navAndFoot.scss
+++ b/scss/_navAndFoot.scss
@@ -20,9 +20,7 @@ footer {
     background-color: $clr-x-dark-blue;
     padding: 1.5rem;
 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    @extend flexWrapCenter;
     ul {
         padding-left: 0;
         li {
