--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -1,13 +1,13 @@
 /*** variables globales ***/
 
 /*** variables colores ***/
-$clr-x-dark-blue: rgb(14, 36, 69);
-$clr-dark-blue: rgb(0, 45, 114);
-$clr-mid-blue: rgb(12, 74, 168);
-$clr-light-blue: rgb(67, 136, 216);
-$clr-x-light-blue: rgb(193, 221, 254);
-$clr-black: rgb(0, 0, 0);
-$clr-white: rgb(255, 255, 255);
+$clr-x-dark-blue: #0e2445;
+$clr-dark-blue: #002d72;
+$clr-mid-blue: #0c4aa8;
+$clr-light-blue: #4388d8;
+$clr-x-light-blue: #c1ddfe;
+$clr-black: #000000;
+$clr-white: #ffffff;
 
 /*** Fuentes ***/
 
