--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,19 @@
 /*** Font-family - Familias tipograficas ***/
 /*** fontweight - Ancho de fuente ***/
 /*** font-size - Tamaño de textos ***/
+/* Realmente no tenía nada para repetir porque el sitio es chico */
+.flexWrapJustCenter, footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 /*** Información general del proyecto ***/
 /*** Globales ***/
 html {
   font-family: "Barlow", sans-serif;
   font-size: 62.5%;
-  color: rgb(0, 0, 0);
+  color: #000000;
 }
 
 body {
@@ -29,7 +36,7 @@ li {
 
 /*** Titulos ***/
 h1, h2, h3 {
-  color: rgb(0, 45, 114);
+  color: #002d72;
 }
 
 h1 {
@@ -58,44 +65,58 @@ h4 {
 
 /*** Colores predefinidos ***/
 .bg-bkg-clr-x-dark-blue {
-  background-color: rgb(14, 36, 69);
+  background-color: #0e2445;
 }
 
 .bg-bkg-clr-dark-blue {
-  background-color: rgb(0, 45, 114);
+  background-color: #002d72;
 }
 
 .bg-bkg-clr-mid-blue {
-  background-color: rgb(12, 74, 168);
+  background-color: #0c4aa8;
 }
 
 .bg-bkg-clr-light-blue {
-  background-color: rgb(67, 136, 216);
+  background-color: #4388d8;
 }
 
 .bg-bkg-clr-x-light-blue {
-  background-color: rgb(193, 221, 254);
+  background-color: #c1ddfe;
 }
 
 /*** Fonts colors ***/
 .bg-font-clr-x-dark-blue {
-  color: rgb(14, 36, 69);
+  color: #0e2445;
 }
 
 .bg-font-clr-dark-blue {
-  color: rgb(0, 45, 114);
+  color: #002d72;
 }
 
 .bg-font-clr-mid-blue {
-  color: rgb(12, 74, 168);
+  color: #0c4aa8;
 }
 
 .bg-font-clr-light-blue {
-  color: rgb(67, 136, 216);
+  color: #4388d8;
 }
 
 .bg-font-clr-x-light-blue {
-  color: rgb(193, 221, 254);
+  color: #c1ddfe;
+}
+
+.btn-general {
+  width: 100%;
+  --bs-btn-color: #ffffff;
+  --bs-btn-bg: #002d72;
+  --bs-btn-border-color: #002d72;
+  --bs-btn-hover-color: #ffffff;
+  --bs-btn-hover-bg: #0c4aa8;
+  --bs-btn-hover-border-color: #0c4aa8;
+  --bs-btn-focus-shadow-rgb: 49,132,253;
+  font-family: "Barlow", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
 }
 
 /*** Nav ***/
@@ -115,20 +136,17 @@ main .main {
 
 /*** Footer ***/
 footer {
-  background-color: rgb(14, 36, 69);
+  background-color: #0e2445;
   padding: 1.5rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 footer ul {
   padding-left: 0;
 }
 footer ul li a {
-  color: rgb(193, 221, 254);
+  color: #c1ddfe;
 }
 footer ul li a:hover {
-  color: rgb(67, 136, 216);
+  color: #4388d8;
 }
 footer .redes {
   display: flex;
@@ -168,7 +186,7 @@ footer .redes img {
   position: relative;
   text-transform: uppercase;
   text-shadow: -15px 5px 20px #ced0d3;
-  color: rgb(193, 221, 254);
+  color: #c1ddfe;
   letter-spacing: -0.05em;
   font-family: "Anton", Arial, sans-serif;
   user-select: none;
@@ -184,7 +202,7 @@ footer .redes img {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: rgb(0, 0, 0);
+  background-color: #000000;
   opacity: 0.5;
   z-index: -1;
 }
@@ -195,7 +213,7 @@ footer .redes img {
   justify-content: flex-start;
 }
 #home p {
-  color: rgb(255, 255, 255);
+  color: #ffffff;
 }
 
 /*** Fin Home ***/
@@ -256,12 +274,16 @@ footer .redes img {
   border-radius: 5px;
   border-style: solid;
   border-width: 1px;
-  border-color: rgb(14, 36, 69);
-  background-color: rgb(193, 221, 254);
+  border-color: #0e2445;
+  background-color: #c1ddfe;
+  width: 100%;
+  font-family: "Anton", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
 }
 .contacto .btnForm:hover {
-  background-color: rgb(12, 74, 168);
-  color: rgb(255, 255, 255);
+  background-color: #0c4aa8;
+  color: #ffffff;
 }
 .contacto .mapa {
   /* width: 50%; */
@@ -272,6 +294,54 @@ footer .redes img {
   width: 100%;
   height: 100%;
   min-height: 300px;
+}
+
+#error404 {
+  background-image: url("../img/404-not_found.webp");
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  z-index: 1;
+}
+#error404 .cont {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+#error404 .error {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 50px;
+  justify-content: flex-start;
+}
+#error404 p {
+  color: #000000;
+  font-family: "Anton", Arial, sans-serif;
+  font-weight: 700;
+  font-size: 2.8rem;
+}
+#error404 h1 {
+  font-family: "Anton", Arial, sans-serif;
+  font-weight: 700;
+  font-size: 3.5rem;
+}
+#error404 .btnError {
+  margin: 25px 0;
+  padding: 10px 60px;
+  border: 1px solid;
+  border-radius: 5px;
+  transition: 1s;
+}
+#error404 .btnErrorEfect {
+  background-color: transparent;
+  color: black;
+}
+#error404 .btnErrorEfect:hover {
+  background-color: rgba(0, 0, 0, 0.22);
+  border-color: rgba(0, 0, 0, 0.22);
+  color: #ececec;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 /*# sourceMappingURL=style.css.map */
