--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,6 +1,6 @@
 /*** Home ***/
 #home {
-    background-image: url('../img/index/dcr_inicio1.jpg');
+    background-image: url('../img/index/dcr_inicio1.webp');
     background-size: cover;
     background-position: center center;
     position: relative;
