--- a/scss/_navAndFoot.scss
+++ b/scss/_navAndFoot.scss
@@ -17,7 +17,7 @@ main {
 
 /*** Footer ***/
 footer {
-    background-color: $clr-x-dark-blue;
+    background-color: $clr-dark-blue;
     padding: 1.5rem;
 
     @extend .flexWrapJustCenter;
