--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -28,4 +28,14 @@
             font-weight: 400;
         }
     }
+
+}
+.imgSEO {
+    margin: 10px;
+    transition: all .5s;
+    
+    &:hover {
+        transform: scale(1.15,1.15);
+        overflow: hidden;
+    }
 }
